@@ -34,4 +34,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:gridlayout-v7:28.0.0-alpha1'
+    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    //implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+
+    implementation 'javax.annotation:jsr250-api:1.0'
+
+    tasks.withType(AbstractCompile) {
+        options.compilerArgs += ["--add-modules", "java.xml.bind"]
+    }
+
+    tasks.withType(Test) {
+        jvmArgs += ["--add-modules", "java.xml.bind"]
+    }
 }
